--- a/extensions/surveygpt/styles/globals.css
+++ b/extensions/surveygpt/styles/globals.css
@@ -9,13 +9,7 @@
 }
 
 @layer components {
-  .infoText {
-    @apply p-4 bg-[#1877F2] rounded-lg max-w-[300px];
-  }
-
-  .chatRow {
-    @apply rounded-lg px-5 py-3 text-sm flex items-center
-    justify-center space-x-2 hover:bg-gray-700/70 cursor-pointer
-    text-gray-300 transition-all duration-200 ease-out;
+  .infoCard {
+    @apply flex items-center px-4 py-4 bg-custom-gray-100 border border-solid border-custom-gray-200 rounded-3xl;
   }
 }
